<resources>
    <string name="app_name">Top Group</string>
    <string name="title_calendar">日历</string>
    <string name="title_account">账本</string>
    <string name="title_storage">空间</string>
    <string name="title_me">用户</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_login">登陆</string>
    <string name="app_username">账户：</string>
    <string name="app_password">密码：</string>
    <string name="edt_un">用户名</string>
    <string name="edt_pw">密码</string>
    <string name="edt_count">可尝试的剩余次数:</string>
    <string name="dig_right">用户名密码正确</string>
    <string name="dig_wrong">用户名密码错误</string>

    <string name="register">新用户注册</string>

    <!--register-->
    <string name="r_ac">账号</string>
    <string name="r_pw">密码</string>
    <string name="r_pw2">确认密码</string>
    <string name="r_nn">昵称</string>
    <string name="r_gd">性别</string>
    <string name="r_btn">注册</string>
    <string name="r_rbn2">女</string>
    <string name="r_rbn1">男</string>
    <string name="r_ac_hint">账户名可使用不超过10字符的字母和数字</string>
    <string name="r_pw_hint">密码可使用不超过12字符的字母和数字</string>
    <string name="r_pw2_hint">应与上面填写的密码一致</string>
    <string name="r_nn_hint">昵称可使用不超过10字符的中英文及数字</string>
    <string name="inputtype">abcdefghijklmnopqrstupwxyzABCDEFGHIJKLMNOPQRSTUPWXYZ0123456789</string>

    <string name="newgroup">创建小组</string>
    <string name="ug_btn_new">确认创建</string>
    <string name="ug_edt_new">请输入你要创建的组名</string>
    <string name="enter">进入小组</string>
    <string name="set_title">设置标题</string>

</resources>
