<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--创建小组-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/newgroup"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/ug_edt_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/ug_edt_new"
                android:ems="10"
                android:maxLines="1" />
        </LinearLayout>
        <Button
            android:id="@+id/ug_btn_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ug_btn_new"/>
    </LinearLayout>

    <!--选择进入的小组-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/newgroup"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="50dp" />
        </LinearLayout>
        <Button
            android:id="@+id/ug_btn_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"/>
    </LinearLayout>
</LinearLayout>
