<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        >
        <!--头部图片-->
        <ImageView
            android:id="@+id/iv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_tab_team" />
        <!--账号栏-->

        <LinearLayout
            android:id="@+id/ll_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:alpha="0.8"
            android:background="#ffffff">

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:drawableLeft="@drawable/ic_account"
                android:hint="@string/edt_un"
                android:digits="@string/inputtype"
                android:inputType="textVisiblePassword"
                android:layout_marginLeft="3dp"
                android:ems="10"
                android:maxLines="1"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:drawableStart="@drawable/ic_account" />
        </LinearLayout>
        <!--密码栏-->

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_number"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.8"
            android:background="#ffffff">


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:drawableStart="@drawable/ic_password"
                android:ems="12"
                android:hint="@string/edt_pw"
                android:digits="@string/inputtype"
                android:inputType="textPassword"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_password"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tev_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/blue"
            android:layout_marginStart="10dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/app_login"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:enabled="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edt_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="4"
            android:inputType="text"
            android:enabled="false"
            android:focusable="false"
            android:visibility="invisible"
            android:text="@string/edt_count" />
        <EditText
            android:id="@+id/edt_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:enabled="false"
            android:focusable="false"
            android:text="" />
    </LinearLayout>

</LinearLayout>
